--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,14 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body
+{
+  background-image: image-url("background.PNG");
+  background-size: cover;
+  background-color: rgba(255,255,255,0.4);
+  background-blend-mode: lighten;
+}
+
 a:hover
 {
   text-decoration: none;
