--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,9 @@
-<div class="container">
-  <div class="row">
-    <div class="title">
-      人気
+<div>
+  <div class="container">
+    <div class="row">
+      <div class="title">
+        人気
+      </div>
     </div>
     <div>
       <%= @popular_questions.each do |popular_q| %>
@@ -10,11 +12,11 @@
         <% end %>
       <% end %>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="title">
-      新着
+    <div class="row">
+      <div class="title">
+        新着
+      </div>
     </div>
     <div>
       <%= @new_questions.each do |new_q| %>
@@ -23,20 +25,20 @@
         <% end %>
       <% end %>
     </div>
-  </div>
-  
-  <div class="row">
-    <div class="title">
-      ととのえスト一覧
-      <tr>
-        <td class="users">
-          <%#= @users.each do |user| %>
-            <%#= link_to user_path(user) do %>
-              <%#= user.name %>
-            <%# end %>
-          <%# end %>
-        </td>
-      </tr>
+
+    <div class="row">
+      <div class="title">
+        ととのえスト一覧
+      </div>
     </div>
+    <tr>
+      <td class="users">
+        <%= @users.each do |user| %>
+          <%= link_to user_path(user) do %>
+            <%= user.name %>
+          <% end %>
+        <% end %>
+      </td>
+    </tr>
   </div>
 </div>
