--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -6,7 +6,7 @@
       </div>
     </div>
     <div>
-      <%= @popular_questions.each do |popular_q| %>
+      <% @popular_questions.each do |popular_q| %>
         <%= link_to question_path(popular_q) do %>
           <% popular_q.q_title %>
         <% end %>
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div>
-      <%= @new_questions.each do |new_q| %>
+      <% @new_questions.each do |new_q| %>
         <%= link_to question_path(new_q) do %>
           <% new_q.q_title %>
         <% end %>
@@ -33,7 +33,7 @@
     </div>
     <tr>
       <td class="users">
-        <%= @users.each do |user| %>
+        <% @users.each do |user| %>
           <%= link_to user_path(user) do %>
             <%= user.name %>
           <% end %>
