--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,6 +3,11 @@
     <div class="row">
       <div class="title">
         人気
+      <%# @random.each do |q| %>
+        <li><%= @random_1st.odai %>とかけまして
+            <%= @random_2nd.odai %>と説く。
+            そのこころは？</li>
+      <%# end %>
       </div>
     </div>
     <div>
