--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,11 +3,6 @@
     <div class="row">
       <div class="title">
         人気
-      <%# @random.each do |q| %>
-        <li><%= @random_1st.odai %>とかけまして
-            <%= @random_2nd.odai %>と説く。
-            そのこころは？</li>
-      <%# end %>
       </div>
     </div>
     <div>
@@ -47,3 +42,4 @@
     </tr>
   </div>
 </div>
+<%= link_to '新規作成', new_question_path %>
