--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,45 +1,64 @@
-<div>
-  <div class="container">
-    <div class="row">
-      <div class="title">
-        人気
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="title">
+      人気
     </div>
-    <div>
-      <% @popular_questions.each do |popular_q| %>
-        <%= link_to question_path(popular_q) do %>
-          <% popular_q.q_title %>
-        <% end %>
-      <% end %>
-    </div>
-
-    <div class="row">
-      <div class="title">
-        新着
-      </div>
-    </div>
-    <div>
-      <% @new_questions.each do |new_q| %>
-        <%= link_to question_path(new_q) do %>
-          <% new_q.q_title %>
-        <% end %>
-      <% end %>
-    </div>
-
-    <div class="row">
-      <div class="title">
-        ととのえスト一覧
-      </div>
-    </div>
-    <tr>
-      <td class="users">
-        <% @users.each do |user| %>
-          <%= link_to user_path(user) do %>
-            <%= user.name %>
-          <% end %>
-        <% end %>
-      </td>
-    </tr>
   </div>
+  <div>
+    <% @popular_questions.each do |popular_q| %>
+      <%= link_to question_path(popular_q) do %>
+        <p>
+          <div class="card">
+            <div class="card-body">
+              <p class="card-title">
+                <%= popular_q.q_title %>
+              </p>
+              <p class="card-text">
+                <%#= popular_q.q_description %>
+              </p>
+            </div>
+          </div>
+        </p>
+      <% end %>
+    <% end %>
+  </div>
+
+  <div class="row">
+    <div class="title">
+      新着
+    </div>
+  </div>
+  <div>
+    <% @new_questions.each do |new_q| %>
+      <%= link_to question_path(new_q) do %>
+        <p>
+          <div class="card">
+            <div class="card-body">
+              <p class="card-title">
+                <%= new_q.q_title %>
+              </p>
+              <p class="card-text">
+                <%#= new_q.q_description %>
+              </p>
+            </div>
+          </div>
+        </p>
+      <% end %>
+    <% end %>
+  </div>
+
+  <div class="row">
+    <div class="title">
+      ととのえスト一覧
+    </div>
+  </div>
+  <tr>
+    <td class="users">
+      <% @users.each do |user| %>
+        <%= link_to user_path(user) do %>
+          <%= user.name %>
+        <% end %>
+      <% end %>
+    </td>
+  </tr>
 </div>
-<%= link_to '新規作成', new_question_path %>
