--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,15 +7,15 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
+            <li><%= link_to 'TOP', '/', class: 'fas fa-clipboard nav-link text-dark' %></li>
             <li><%= link_to 'ととのえてとは？', home_about_path, class: 'fas fa-bread-slice nav-link text-dark' %></li>
-          <%# if user_signed_in? %>
-            <li><%= link_to 'Menu', '#', class: 'fas fa-clipboard nav-link text-dark' %></li>
-            <li><%= link_to 'Users', '#', class: 'fas fa-fish nav-link text-dark' %></li>
+          <% if logged_in? %>
+            <li><%= link_to 'ととのえる', new_question_path, class: 'fas fa-bread-slice nav-link text-dark' %></li>
             <li><%= link_to 'ログアウト', logout_path, method: :delete, class: 'fas fa-sign-out-alt nav-link text-dark' %></li>
-          <%# else %>
+          <% else %>
             <li><%= link_to '新規登録', signup_path, class: 'fas fa-user-plus nav-link text-dark' %></li>
             <li><%= link_to 'ログイン', login_path, class: 'fas fa-sign-in-alt nav-link text-dark' %></li>
-          <%# end %>
+          <% end %>
         </ul>
       </div>
     </div>
