--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,14 +1,22 @@
-<div class="container offset-1">
-  <h2><strong>問題</strong></h2>
-  <%= form_with model: @question, local: true do |f| %>
-    <div class="form-group col-md-10">
-      <%= f.text_field :q_title, class: 'form-control', readonly: true, value: "#{@random_1st} とかけまして #{@random_2nd} と説くそのこころは？" %>
-    </div>
-    <div class="form-group col-md-10">
-      <%= f.text_field :q_description, class: 'form-control' %>
-    </div>
-    <div class="form-group col-md-10">
-      <%= f.submit "答える" %>
-    </div>
-  <% end %>
+<div class="card my-5">
+  <div class="card-body">
+    <h2><strong>問題</strong></h2>
+    <%= form_with model: @question, local: true do |f| %>
+      <p class="card-title">
+        <div class="form-group">
+          <%= f.text_area :q_title, class: 'form-control ', cols: "30", rows: "6", readonly: true,
+          style: "font-size: calc(30/ 1400 * 100vw);",
+          value: "#{@random_1st} とかけまして  \n\n#{@random_2nd} ととく  \n\nそのこころは？" %>
+        </div>
+      </p>
+      <p class="card-text">
+        <div class="form-group">
+          <%= f.text_area :q_description, rows: "4", placeholder: 'どちらも〇〇でしょう', class: 'form-control' %>
+        </div>
+      </p>
+      <div class="col-md-3">
+        <%= f.submit "答える" %>
+      </div>
+    <% end %>
+  </div>
 </div>
