--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,19 +3,25 @@
     <div class="col-md-6 col-md-offset-3">
       <h1>Sign up</h1>
       <%= form_with model: @user, url: signup_path, local: true do |f| %>
+      <div class="form-group">
         <%= f.label :name, 'アカウント名' %>
         <%= f.text_field :name, class: 'form-control' %>
-  
+      </div>
+      <div class="form-group">
         <%= f.label :email, 'メールアドレス' %>
         <%= f.email_field :email, class: 'form-control' %>
-  
+      </div>
+      <div class="form-group">
         <%= f.label :password, 'パスワード' %>
         <%= f.password_field :password, class: 'form-control' %>
-  
+      </div>
+      <div class="form-group">
         <%= f.label :password_confirmation, 'パスワード(確認)' %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
-  
+      </div>
+      <div class="form-group">
         <%= f.submit "新規登録", class: "btn btn-primary" %>
+      </div>
       <% end %>
     </div>
   </div>
