--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -6,6 +6,22 @@ body
   max-height: 100vh;
 }
 
+h2 {
+  position: relative;
+  padding: 1rem 2rem calc(1rem + 10px);
+  background: #00f3ff;
+}
+
+h2:before {
+  position: absolute;
+  top: calc(-7 / 1400 * 100vw);
+  left: calc(-7 / 1400 * 100vw);
+  width: 100%;
+  height: 100%;
+  content: '';
+  border: calc(4 / 1400 * 100vw) solid #000;
+}
+
 .card
 {
   justify-content: center;
@@ -14,10 +30,63 @@ body
   margin: 0 auto;
 }
 
-.card .h5 .card-title
+.card-body .card-title
 {
   position: relative;
   padding: 1.5rem 1.5rem calc(1.5rem);
+  white-space: pre-line;
+  font-size: calc(30/ 1400 * 100vw);
+}
+
+.card-body{
+    position: relative;
+    background: #fff0cd;
+    box-shadow: 0px 0px 0px calc(5 / 1400 * 100vw) #fff0cd;
+    border: dashed 2px white;
+    padding: 0.2em 0.5em;
+    color: #454545;
+    margin: 0;
+}
+
+.card-body:after{
+    position: absolute;
+    content: '';
+    right: calc(-7 / 1400 * 100vw);
+    top: calc(-7 / 1400 * 100vw);
+    border-width: 0 calc(15 / 1400 * 100vw) calc(15 / 1400 * 100vw) 0;
+    border-style: solid;
+    border-color: #ffdb88 #fff #ffdb88;
+    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15);
+}
+
+.title-box, .text-box
+{
+    margin:2em 0;
+    position: relative;
+    padding: 0.5em 1.5em;
+    border-top: solid 2px black;
+    border-bottom: solid 2px black;
+    background-color: #fff;
+}
+
+.title-box:before, .title-box:after,
+.text-box:before, .text-box:after
+{
+    content: '';
+    position: absolute;
+    top: -10px;
+    width: 2px;
+    height: -webkit-calc(100% + 20px);
+    height: calc(100% + 20px);
+    background-color: black;
+}
+
+.title-box:before, .text-box:before {left: calc(10/ 1400 * 100vw);}
+.title-box:after, .text-box:after {right: calc(10/ 1400 * 100vw);}
+
+.text-box
+{
+  font-size: calc(30/ 1400 * 100vw);
 }
 
 .card .card-title .textarea
