--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,14 +1,144 @@
-.title {
+.title
+{
   display: inline-block;
   border-bottom: 2px solid #45bf1e;
   color: #222;
   font-weight: bold;
   font-size: 1.8rem;
   padding: 1rem 1rem 0.5rem 1rem ;
-  margin-bottom: 2rem;
+  margin-bottom: calc(5 / 1400 * 100vw );
 }
 
-.card .card-body .card-title
+.question-body
 {
+  text-align: center;
+  justify-content: center;
   white-space: pre-line;
+  margin-top: calc(20 / 1400 * 100vw );
+  margin-bottom: calc(30 / 1400 * 100vw );
+  position: relative;
+  width: 100%;
+  color: #555555;
+  background-color: #fff;
+  border: calc(5 / 1400 * 100vw ) double #000;
+  box-shadow: 0 0 calc(5 / 1400 * 100vw ) calc(2 / 1400 * 100vw ) #ffcccc inset;
+  left: calc(30 / 1400* 100vw);
 }
+
+.question-body .question-title
+{
+  position: absolute;
+  padding: calc(10 / 1400 * 100vw );
+  left: calc(30 / 1400 * 100vw );
+  top: calc(-20 / 1400 * 100vw );
+  font-weight: bold;
+  background-color: #fff;
+  color: #dc143c;
+}
+
+.question-body p
+{
+  padding: calc(5 / 1400 * 100vw ) calc(5 / 1400 * 100vw );
+  margin: 0;
+}
+
+input[type="radio"]
+{
+  display:none;
+}
+
+.tab_wrap
+{
+  width: calc(550 / 1400 * 100vw );
+  margin: calc(50 / 1400 * 100vw ) auto;
+}
+
+.tab_area
+{
+  font-size: 0;
+  margin-right: calc(30 / 1400 * 100vw );
+  text-align: right;
+}
+
+.tab_area label
+{
+  width: calc(80 / 1400 * 100vw );
+  margin-right: calc(15 / 1400 * 100vw );
+  display: inline-block;
+  padding: calc(10 / 1400 * 100vw ) 0 calc(10 / 1400 * 100vw );
+  color: #fff;
+  background: #90C9CF;
+  text-align: center;
+  font-size: calc(14 / 1400 * 100vw );
+  cursor: pointer;
+  transition: ease 0.2s;
+  border: calc(4 / 1400 * 100vw ) solid #90C9CF;
+  border-bottom: none;
+  border-radius: 30% 5% 2% 5%/ 14% 40% 25% 25%;
+  transform: translateY(calc(15 / 1400 * 100vw ));
+  position: relative;
+}
+
+.tab_area label:last-of-type
+{
+  margin-right: 0;
+}
+
+.tab_area label:hover
+{
+  background: #afd6d8;
+}
+
+.panel_area{
+  width: calc(650 / 1400 * 100vw );
+  height: calc(900 / 1400 * 100vw );
+  background: #fff;
+  padding: calc(10 / 1400 * 100vw ) 0;
+  border: calc(4 / 1400 * 100vw ) solid #90C9CF;
+  border-radius: 2% 12% 2% 12%/ 22% 8% 22% 8%;
+  position: relative;
+  z-index: 0;
+  right: calc(50 / 1400* 100vw);
+}
+
+.tab_panel
+{
+  width: calc(580 / 1400 * 100vw );
+  display: none;
+  color: #000;
+}
+
+.tab_panel p
+{
+  font-size: calc(20 / 1400 * 100vw );
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+.tab_area label.active
+{
+  background: #fff;
+  color: #000;
+}
+
+.tab_panel.active
+{
+  display: block;
+}
+
+#tab1:checked ~ .tab_area .tab1_label{background:#fff; color:#000;}
+#tab1:checked ~ .panel_area #panel1{display:block;}
+#tab2:checked ~ .tab_area .tab2_label{background:#fff; color:#000;}
+#tab2:checked ~ .panel_area #panel2{display:block;}
+#tab3:checked ~ .tab_area .tab3_label{background:#fff; color:#000;}
+#tab3:checked ~ .panel_area #panel3{display:block;}
+
+// $i:1;
+// $length:3;
+// @while $i <= $length{
+// 	#tab#{$i}:checked{
+// 		~ .tabarea1 .tab#{$i}_label{background:#fff; color:#000;}
+// 		~ .panel_area #panel#{$i}{display:block;}
+// 	}
+// 	$i:$i + 1;
+// }
