--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -16,6 +16,11 @@
       </div>
     </p>
     <p>
+      <div id="evaluate_stars">
+        <i class="fa-solid fa-star" style="color: yellow;"></i>
+      </div>
+    </p>
+    <p>
       <div class="card-footer">
         ととのえし者：<%= @question.user.name %>
       </div>
