--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag 'questions', :media => "all" %>
+
 <div class="card my-5">
   <div class="card-body">
     <h2><strong>問題</strong></h2>
