--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,10 @@
-about page
+<%= stylesheet_link_tag 'homes', :media => "all" %>
+<% @page_title = "About"%>
+
+<div class="about-text">
+  お題がランダムに出題されます。<br>
+  それを上手いことととのえるサイトです。<br>
+  ととのえるのが難しいお題も多いかと思いますが<br>
+  問題自体がランダムのため、おそらく一回しか出会えません。<br>
+  諦めずに関連性を見つけ、ととのえていただけると幸いです。
+</div>
