--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -25,6 +25,26 @@
   left: calc(30 / 1400* 100vw);
 }
 
+.about-text
+{
+  display: inline-box;
+  text-align: center;
+  justify-content: center;
+  margin-top: calc(20 / 1400 * 100vw );
+  margin-bottom: calc(30 / 1400 * 100vw );
+  padding: calc(30 / 1400 * 100vw);
+  position: absolute;
+  width: 50%;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: calc(20 / 1400 * 100vw);
+  color: #555555;
+  background-color: #fff;
+  border: calc(5 / 1400 * 100vw ) double #000;
+  box-shadow: 0 0 calc(5 / 1400 * 100vw ) calc(2 / 1400 * 100vw ) #ffcccc inset;
+}
+
 .question-body .question-title
 {
   position: absolute;
@@ -40,6 +60,17 @@
 {
   padding: calc(5 / 1400 * 100vw ) calc(5 / 1400 * 100vw );
   margin: 0;
+}
+
+.question-body-index
+{
+  display: inline-box;
+  text-align: center;
+  justify-content: center;
+  width: 50%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  font-size: calc(20 / 1400 * 100vw);
 }
 
 input[type="radio"]
@@ -91,7 +122,7 @@ input[type="radio"]
 
 .panel_area{
   width: calc(650 / 1400 * 100vw );
-  height: calc(950 / 1400 * 100vw );
+  height: 100%;
   background: #fff;
   padding: calc(10 / 1400 * 100vw ) 0;
   border: calc(4 / 1400 * 100vw ) solid #90C9CF;
