--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,4 +1,5 @@
 <%= stylesheet_link_tag 'questions', :media => "all" %>
+<% @page_title = "出題"%>
 
 <div class="card my-5">
   <div class="card-body">
