--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
     <tr>
       <th></th>
       <% if current_user? %>
-        <p><%= link_to '登録解除', unsubscribe_path, method: :delete, data: { confirm: '本当に登録解除しますか？' } %></p>
+        <td><%= link_to '登録解除', unsubscribe_path, method: :delete, data: { confirm: '本当に登録解除しますか？' }, class: "btn btn-outline-danger rounded-pill" %></td>
       <% end %>
     </tr>
   </table>
